<resources>
    <string name="app_name">GoGoGaucho</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="sign_in_with_google">Sign In with </string>
    <string name="sign_up">Create an account</string>
    <string name="or">or</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="sign_out">Sign Out</string>
    <string name="sideshow">SideShow</string>
    <string name="account">Already have an account?</string>
    <string name="no_account">Don\'t have an account?</string>

    <string name="college1">College of Creative Study</string>
    <string name="college2">College of Engineering</string>
    <string name="college3">College of Letters and Science</string>

    <string-array name="c1">
        <item>Art</item>
        <item>Biology</item>
        <item>Chemistry &amp; BioChemistry</item>
        <item>Computing</item>
        <item>Mathematics</item>
        <item>Music Composition</item>
        <item>Physics</item>
        <item>Writing &amp; Literature</item>
    </string-array>

    <string-array name="c2">
        <item>Chemical Engineering</item>
        <item>Computer Engineering</item>
        <item>Computer Science</item>
        <item>Electrical Engineering</item>
        <item>Mechanical Engineering</item>
    </string-array>

    <string-array name="c3">
        <item>Anthropology</item>
        <item>Art</item>
        <item>Asian American Studies</item>
        <item>Biomolecular Science &amp; Engineering</item>
        <item>Black Studies</item>
        <item>Chemistry and Biochemistry</item>
        <item>Chicana/o Studies</item>
        <item>Classics</item>
        <item>Communication</item>
        <item>Comparative Literature</item>
        <item>Earth Science</item>
        <item>East Asian Language and Cultural Studies</item>
        <item>Ecology, Evolution and Marine Biology</item>
        <item>Economics</item>
        <item>English</item>
        <item>Environmental Studies</item>
        <item>Exercise and Sport Studies</item>
        <item>Feminist Studies</item>
        <item>Film and Media Studies</item>
        <item>French and Italian</item>
        <item>Geography</item>
        <item>Germanic, and Slavic Studies</item>
        <item>Global and International Studies</item>
    </string-array>


    <string name="require">Major Require</string>
    <string name="elective">Major Elective</string>
    <string name="science">Science Elective</string>
    <string name="google_icon">Google Icon</string>
    <string name="app_logo">App Logo</string>
    <string name="policy">By continuing, you agree to our Terms of Service and Private Policy</string>
    <string name="major_requirement">Major Requirement</string>
    <string name="general_education">General Education</string>
    <string name="welcome">Hello, Student</string>
    <string name="social_science">Social Science</string>
    <string name="area_d">Area D</string>
    <string name="completed">Completed</string>
    <string name="rocket_launch">Rocket Launch</string>
    <string name="enter_button">Enter Button</string>
    <string name="area_icon">Area Icon</string>
    <string name="area_e">Area E</string>
    <string name="culture_thought">Culture and Thought</string>
    <string name="the_arts">The Arts</string>
    <string name="area_f">Area F</string>
    <string name="area_g">Area G</string>
    <string name="literature">Literature</string>
    <string name="major_courses">Major Courses</string>
    <string name="major_electives">Major Electives</string>
    <string name="you_have_completed">You have completed</string>
    <string name="_123">123</string>
    <string name="units">units</string>

    <string name="ge_title">Please select General Education courses taken</string>
    <string name="major_title">What is your major?</string>
    <string name="next">NEXT</string>
    <string name="mjcourse_title">Please select courses taken</string>

</resources>